# pytransformix

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml
transformix/: __init__.py  core.py
